--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,27 +11,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="10"
+        android:orientation="vertical"
+        android:weightSum="20"
         android:background="#e8e8e8"
         >
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:paddingTop="32dp"
-            android:paddingBottom="32dp"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             >
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
+                android:layout_width="0sp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:gravity="center"
                 >
 
 
@@ -41,31 +36,30 @@
                     android:text="@string/current_score"
                     android:textAllCaps="true"
                     android:textStyle="bold"
-                    android:textSize="14sp"
+                    android:textSize="10sp"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/current_score"
-                    android:textSize="18sp"
+                    android:textSize="10sp"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/layout_margin_top"
                     android:text="@string/high_score"
                     android:textAllCaps="true"
                     android:textStyle="bold"
-                    android:textSize="14sp"
+                    android:textSize="12sp"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/high_score"
-                    android:textSize="18sp"
+                    android:textSize="10sp"
                     />
 
 
@@ -90,15 +84,15 @@
 
 
         <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="1sp"
             android:background="#000"
             />
 
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="9"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="19"
             >
 
             <uk.co.projectprime.tetris.view.TetrisView
