--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,14 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginVertical="16dp"
         android:orientation="vertical"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
+            android:textAllCaps="true"
             android:textSize="80sp"
             />
 
@@ -36,21 +37,14 @@
             android:textSize="20sp"
             android:layout_marginTop="@dimen/layout_margin_top"
             />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/score"
-            android:text="@string/score"
-            android:textSize="20sp"
-            android:layout_marginTop="@dimen/layout_margin_top"
-            />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             >
 
             <Button
