--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="20"
         android:background="#e8e8e8"
         >
 
@@ -23,9 +22,9 @@
             >
 
             <LinearLayout
-                android:layout_width="0sp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:paddingLeft="100dp"
                 android:orientation="vertical"
                 >
 
@@ -85,14 +84,13 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1sp"
             android:background="#000"
-            />
+            android:layout_height="0dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0sp"
-            android:layout_weight="19"
+            android:layout_height="match_parent"
+
             >
 
             <uk.co.projectprime.tetris.view.TetrisView
